Add fast manual iso date parser.